--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,21 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".InRange"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="GjPjY5gSyazmxQQ5Z0zqymhE9zPfPyUhIZj6UWQy" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="8DLjAS0SbDNyPnL1stvBjr98sFnOXcwpx2XSahjP" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
