--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    signingConfigs {
+        release {
+            storeFile file("C:\\Hackasoft\\InRange\\hack_keystore.keystore")
+            storePassword "android"
+            keyAlias "hack"
+            keyPassword "android"
+        }
+        debug {
+            storeFile file("C:\\Hackasoft\\InRange\\hack_keystore.keystore")
+            storePassword "android"
+            keyAlias "hack"
+            keyPassword "android"
+        }
+
+        buildTypes {
+            release {
+                minifyEnabled false
+                signingConfig signingConfigs.release
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            }
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.google.api-client:google-api-client:1.18.0-rc'
 }
