--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,27 +18,27 @@ android {
         }
     }
 
-//    signingConfigs {
-//        release {
-//            storeFile file("C:\\Hackasoft\\InRange\\hack.keystore")
-//            storePassword "android"
-//            keyAlias "hack"
-//            keyPassword "android"
-//        }
-//        debug {
-//            storeFile file("C:\\Hackasoft\\InRange\\hack.keystore")
-//            storePassword "android"
-//            keyAlias "hack"
-//            keyPassword "android"
-//        }
-//    }
-//        buildTypes {
-//            release {
-//                minifyEnabled false
-////                signingConfig signingConfigs.release
-//                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-//            }
-//        }
+    signingConfigs {
+        release {
+            storeFile file("C:\\Hackasoft\\InRange\\hack.keystore")
+            storePassword "android"
+            keyAlias "hack"
+            keyPassword "android"
+        }
+        debug {
+            storeFile file("C:\\Hackasoft\\InRange\\hack.keystore")
+            storePassword "android"
+            keyAlias "hack"
+            keyPassword "android"
+        }
+    }
+        buildTypes {
+            release {
+                minifyEnabled false
+                signingConfig signingConfigs.release
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            }
+        }
 
 }
 
