--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,16 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".InRange"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="GjPjY5gSyazmxQQ5Z0zqymhE9zPfPyUhIZj6UWQy" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="8DLjAS0SbDNyPnL1stvBjr98sFnOXcwpx2XSahjP" />
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDLcjNb__3dwCCHGUpQBIBmlmiClT3f0dc" >
