--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,12 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="GjPjY5gSyazmxQQ5Z0zqymhE9zPfPyUhIZj6UWQy" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="8DLjAS0SbDNyPnL1stvBjr98sFnOXcwpx2XSahjP" />
 
 
         <activity
