--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
-
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
@@ -25,7 +23,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.parse.APPLICATION_ID"
             android:value="GjPjY5gSyazmxQQ5Z0zqymhE9zPfPyUhIZj6UWQy" />
@@ -33,11 +30,9 @@
             android:name="com.parse.CLIENT_KEY"
             android:value="8DLjAS0SbDNyPnL1stvBjr98sFnOXcwpx2XSahjP" />
 
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
 
         <meta-data
@@ -45,14 +40,12 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
+            android:name=".MainActivity2"
+            android:label="LoginActivity" />
+        <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".DetailsActivity"
@@ -66,10 +59,19 @@
         <uses-feature
             android:glEsVersion="0x00020000"
             android:required="true" >
-
         </uses-feature>
 
+        <activity
+            android:name=".LoginActivityStart"
+            android:label="@string/title_activity_login_activity_start" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
+
+
